# adamo-sdk-python

./: .gitignore  README.md  pyproject.toml
examples/: callback.py  control_latency.py  control_listen.py  control_to_shm.py  data_download.py  dataset_basic.py  dataset_multimodal.py  dataset_normalize.py  discover_topics.py  export_episodes.py  gello_publish.py  gello_subscribe.py  joystick_to_ros.py  liveliness.py  log_smoke.py  mac_hw_test.py  mac_hw_yaml_mirror.py  multicam_with_control.py  pandas_explore.py  plot_aligned.py  plot_sensors.py  publish.py  ros_camera_source.py  ros_to_shm_bridge.py  shm_camera_source.py  shm_stream.py  stream_device.py  stream_numpy.py  stream_opencv.py  stream_ros.py  stream_yolo.py  subscribe.py  test_control_roundtrip.py  test_roundtrip.py  train_policy.py  video_frames.py  webcam_stream.py
rust/: Cargo.toml
rust/src/: lib.rs
src/adamo/: __init__.py  _auth.py  _video.py  auth.py  config.py  control.py  session.py  stats.py  video.py
src/adamo/cameras/: __init__.py  base.py  oak.py  realsense.py  v4l2.py  zed.py
src/adamo/data/: __init__.py  client.py  dataset.py  models.py
src/adamo/operate/: __init__.py  _config.py  control.py  session.py
