[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "adamo"
version = "0.4.12"
description = "Python SDK for Adamo — stream video and data via Zenoh"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "httpx>=0.28",
    "eclipse-zenoh>=1.7",
]

[project.optional-dependencies]
video = ["iceoryx2>=0.6", "numpy>=1.24"]
data = ["pandas>=2"]
ml = ["torch>=2", "av>=13", "numpy>=1.24"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.maturin]
manifest-path = "../Cargo.toml"
features = ["python"]
module-name = "adamo._native"
python-source = "src"
