[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "adamo"
version = "0.4.15"
description = "Python SDK for Adamo — stream video and data via Zenoh"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "httpx>=0.28",
    # Pinned to 1.8.0: only zenoh release with both cp38 (Ubuntu 20.04's
    # Python 3.8, x86_64) and cp39-abi3 (everything else) wheels. 1.7.0+
    # dropped cp38, 1.9.0 is cp39-only — either breaks `pip install` on
    # stock Ubuntu 20.04 because old pip falls through to the sdist and
    # hits `puccinialin` unresolvable.
    "eclipse-zenoh==1.8.0",
]

[project.optional-dependencies]
video = ["iceoryx2>=0.6", "numpy>=1.24"]
data = ["pandas>=2"]
ml = ["torch>=2", "av>=13", "numpy>=1.24"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.maturin]
manifest-path = "../Cargo.toml"
features = ["python"]
module-name = "adamo._native"
python-source = "src"
