[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "adamo"
version = "0.4.20"
description = "Python SDK for Adamo — stream video and data via Zenoh"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "httpx>=0.28",
    # zenoh is statically linked into the _native Rust extension; we no
    # longer depend on the separate eclipse-zenoh PyPI package. This
    # keeps `pip install adamo` working on stock Ubuntu 20.04 / Python
    # 3.8 (eclipse-zenoh dropped cp38 wheels at 1.7.0, and its 1.8.0
    # cp38 wheel references PyCMethod_New which only exists in 3.9+).
]

[project.optional-dependencies]
video = ["iceoryx2>=0.6", "numpy>=1.24"]
data = ["pandas>=2"]
ml = ["torch>=2", "av>=13", "numpy>=1.24"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.maturin]
manifest-path = "../Cargo.toml"
features = ["python"]
module-name = "adamo._native"
python-source = "src"
